...
    <string name="use_fingerprint_to_authenticate_key">use_fingerprint_to_authenticate_key</string>
    <string name="cancel">取消</string>
    <string name="use_password">Use password</string>
    <string name="ok">確認</string>
    <string name="purchase_done">Purchase successful</string>
    <string name="main_map">附近</string>
    <string name="action_suggestion">提出建議</string>
    <string name="action_score">給個評分</string>
    <string name="main_about">關於</string>
    <string name="title_activity_near_by">NearBy</string>
</resources>

